<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.preference.PreferenceCategory
        android:title="@string/voicekb_settings_title"
        app:iconSpaceReserved="false">

        <androidx.preference.MultiSelectListPreference
            android:key="com.idefant.voicekb.input_languages"
            android:title="@string/voicekb_settings_input_languages_title"
            app:iconSpaceReserved="false"
            app:entries="@array/voicekb_input_languages"
            app:entryValues="@array/voicekb_input_languages_values"
            app:defaultValue="@array/voicekb_default_input_languages"/>

        <androidx.preference.EditTextPreference
            android:key="com.idefant.voicekb.overlay_characters"
            android:title="@string/voicekb_settings_overlay_characters_title"
            android:summary="@string/voicekb_default_overlay_characters"
            android:defaultValue="()-:!?,."
            app:positiveButtonText="@string/voicekb_okay"
            app:negativeButtonText="@string/voicekb_cancel"
            app:dialogTitle="@string/voicekb_settings_overlay_characters_title"
            app:iconSpaceReserved="false"/>

        <androidx.preference.SwitchPreference
            android:key="com.idefant.voicekb.auto_enter"
            android:title="@string/voicekb_settings_auto_enter_title"
            android:summary="@string/voicekb_settings_auto_enter_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>

        <androidx.preference.Preference
            android:key="com.idefant.voicekb.smart_insertion"
            android:title="@string/voicekb_smart_insertion_title"
            android:summary="@string/voicekb_smart_insertion_settings_summary"
            app:iconSpaceReserved="false"/>

        <androidx.preference.SwitchPreference
            android:key="com.idefant.voicekb.resend_button"
            android:title="@string/voicekb_settings_enable_resend_button_title"
            android:summary="@string/voicekb_settings_enable_resend_button_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>

        <androidx.preference.SwitchPreference
            android:key="com.idefant.voicekb.instant_recording"
            android:title="@string/voicekb_settings_instant_recording_title"
            android:summary="@string/voicekb_settings_instant_recording_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>

        <androidx.preference.SwitchPreference
            android:key="com.idefant.voicekb.file_upload_enabled"
            android:title="@string/voicekb_settings_file_upload_title"
            android:summary="@string/voicekb_settings_file_upload_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>

        <androidx.preference.SwitchPreference
            android:key="com.idefant.voicekb.quick_settings_button"
            android:title="@string/voicekb_settings_quick_settings_button_title"
            android:summary="@string/voicekb_settings_quick_settings_button_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false"/>

        <androidx.preference.SwitchPreference
            android:key="com.idefant.voicekb.audio_focus"
            android:title="@string/voicekb_settings_audio_focus_title"
            android:summary="@string/voicekb_settings_audio_focus_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false"/>

        <androidx.preference.SwitchPreference
            android:key="com.idefant.voicekb.use_bluetooth_mic"
            android:title="@string/voicekb_settings_use_bluetooth_mic_title"
            android:summary="@string/voicekb_settings_use_bluetooth_mic_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>

        <androidx.preference.SwitchPreference
            android:key="com.idefant.voicekb.vibration"
            android:title="@string/voicekb_settings_vibration_title"
            android:summary="@string/voicekb_settings_vibration_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false"/>

        <androidx.preference.Preference
            android:key="com.idefant.voicekb.usage"
            android:title="@string/voicekb_settings_usage"
            tools:summary="Estimated cost: 1.34 $"
            app:iconSpaceReserved="false"/>

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/voicekb_settings_theme_title"
        app:iconSpaceReserved="false">

        <androidx.preference.ListPreference
            android:key="com.idefant.voicekb.theme"
            android:title="@string/voicekb_settings_theme"
            android:summary="%s"
            android:defaultValue="system"
            app:entries="@array/voicekb_theme_entries"
            app:entryValues="@array/voicekb_theme_values"
            app:iconSpaceReserved="false"/>

        <androidx.preference.SwitchPreference
            android:key="com.idefant.voicekb.animations"
            android:title="@string/voicekb_settings_animations_title"
            android:summary="@string/voicekb_settings_animations_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false"/>

        <androidx.preference.ListPreference
            android:key="com.idefant.voicekb.app_language"
            android:title="@string/voicekb_settings_app_language_title"
            android:summary="%s"
            android:defaultValue="system"
            app:entries="@array/voicekb_app_languages"
            app:entryValues="@array/voicekb_app_languages_values"
            app:iconSpaceReserved="false"/>
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/voicekb_settings_api_title"
        app:iconSpaceReserved="false">

        <androidx.preference.Preference
            android:key="com.idefant.voicekb.api_settings"
            android:title="@string/voicekb_settings_api_settings"
            android:summary="@string/voicekb_settings_api_settings_summary"
            app:iconSpaceReserved="false"/>

        <androidx.preference.Preference
            android:key="com.idefant.voicekb.prompts"
            android:title="@string/voicekb_settings_prompts_title"
            android:summary="@string/voicekb_settings_prompts_summary"
            app:iconSpaceReserved="false"/>

        <androidx.preference.SwitchPreference
            android:key="com.idefant.voicekb.proxy_enabled"
            android:title="@string/voicekb_settings_proxy_enabled_title"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>

        <androidx.preference.EditTextPreference
            android:key="com.idefant.voicekb.proxy_host"
            android:title="@string/voicekb_settings_proxy_host_title"
            android:summary="@string/voicekb_settings_proxy_hint"
            app:positiveButtonText="@string/voicekb_okay"
            app:negativeButtonText="@string/voicekb_cancel"
            app:dialogTitle="@string/voicekb_settings_proxy_host_title"
            app:dependency="com.idefant.voicekb.proxy_enabled"
            app:iconSpaceReserved="false"/>

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/voicekb_settings_about_title"
        app:iconSpaceReserved="false">

        <androidx.preference.Preference
            android:key="com.idefant.voicekb.cache"
            android:title="@string/voicekb_settings_cache"
            android:summary="@string/voicekb_settings_cache_summary"
            app:iconSpaceReserved="false"/>

        <androidx.preference.Preference
            android:key="com.idefant.voicekb.github"
            android:title="@string/voicekb_settings_github"
            android:summary="@string/voicekb_settings_github_summary"
            app:iconSpaceReserved="false"/>

        <androidx.preference.Preference
            android:key="com.idefant.voicekb.about"
            android:title="@string/voicekb_about"
            app:iconSpaceReserved="false" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
